# Multicompare

./: .gitignore  Dockerfile  README.md  img_compare_settings.json  multicompare.py  nuitka-crash-report.xml  pyproject.toml  requirements.txt
.github/: FUNDING.yml
scripts/: build.py  make_icon.py
src/: gui.py  icon_factory.py  logic.py
tests/: test_logic.py
